--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-icons": "^4.12.0",
+    "react-native": "0.72.6",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-paper": "^5.11.4",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-paper-select": "^1.0.2",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
